Bug 437113 - Status bar text (right side) has wrong spacing (horizontally cut off)
Summary: Status bar text (right side) has wrong spacing (horizontally cut off)
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 21.04.0
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
: 437135 437616 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-14 18:54 UTC by Veps
Modified: 2021-07-02 21:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04.2
Sentry Crash Report:


Attachments
Status bar text cuts off horizontally. (3.21 KB, image/jpeg)
2021-05-14 18:54 UTC, Veps
Details
attachment-11572-0.html (1.37 KB, text/html)
2021-05-16 12:05 UTC, Stephen Esseenyne
Details
attachment-17456-0.html (1.58 KB, text/html)
2021-05-17 05:44 UTC, Stephen Esseenyne
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Veps 2021-05-14 18:54:35 UTC
Created attachment 138429 [details]
Status bar text cuts off horizontally.

STEPS TO REPRODUCE
1. Install 21.04.0
2. Hover mouse in the timeline over a clip.

OBSERVED RESULT
See attached picture.

EXPECTED RESULT
Readable text.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Julius Künzel 2021-05-16 11:55:57 UTC
*** Bug 437135 has been marked as a duplicate of this bug. ***
Comment 2 Stephen Esseenyne 2021-05-16 12:05:43 UTC
Created attachment 138479 [details]
attachment-11572-0.html

Apologies for the duplication. Thank you for your time invested in this. S.

On Sun, 16 May 2021 12:56 Julius Künzel, <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=437113
>
> Julius Künzel <jk.kdedev@smartlab.uber.space> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |stephense92@gmail.com
>
> --- Comment #1 from Julius Künzel <jk.kdedev@smartlab.uber.space> ---
> *** Bug 437135 has been marked as a duplicate of this bug. ***
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 3 Julius Künzel 2021-05-16 12:18:31 UTC
Git commit db00e238c0a91f153a7fb1d66d5ff01ee89e73b9 by Julius Künzel.
Committed on 16/05/2021 at 12:18.
Pushed by jlskuz into branch 'release/21.04'.

Fix alignment of statusbar message label

M  +1    -1    src/statusbarmessagelabel.cpp

https://invent.kde.org/multimedia/kdenlive/commit/db00e238c0a91f153a7fb1d66d5ff01ee89e73b9
Comment 4 Julius Künzel 2021-05-16 12:21:17 UTC
I hope it is fixed now. Please test with tomorrows nightly and reopen if it is still wrong aligned.
Comment 5 Stephen Esseenyne 2021-05-16 14:52:24 UTC
(In reply to Julius Künzel from comment #4)
> I hope it is fixed now. Please test with tomorrows nightly and reopen if it
> is still wrong aligned.

Thanks for your prompt attention Julius. I'll test the Windows Daily Build on or after Monday 17th.
Comment 6 Stephen Esseenyne 2021-05-17 05:44:46 UTC
Created attachment 138496 [details]
attachment-17456-0.html

Hello

I am afraid the KDE bug bot has created another duplicate; bug report
138429 refers.

If I can be of service please let me know. Thank you.

Stephen

On Sun, 16 May 2021, 12:56 Julius Künzel, <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=437113
>
> Julius Künzel <jk.kdedev@smartlab.uber.space> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |stephense92@gmail.com
>
> --- Comment #1 from Julius Künzel <jk.kdedev@smartlab.uber.space> ---
> *** Bug 437135 has been marked as a duplicate of this bug. ***
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 7 Julius Künzel 2021-05-17 13:53:56 UTC
No worries, everything seems to be as it should…

Btw today's nightly is ready: https://binary-factory.kde.org/job/Kdenlive_Nightly_mingw64/
Comment 8 Stephen Esseenyne 2021-05-20 22:19:50 UTC
I have now had chance to test this and the issue has been rectified.

Thanks again.

S.
Comment 9 Julius Künzel 2021-07-02 21:11:07 UTC
*** Bug 437616 has been marked as a duplicate of this bug. ***