Fix alignment of statusbar message label

BUG: 437113